--- a/client/src/Components/Login-Enroll/Enrollnow.css
+++ b/client/src/Components/Login-Enroll/Enrollnow.css
@@ -1,7 +1,7 @@
 .outer-enrollnow-container {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   align-items: center;
   /* background: linear-gradient(to top left, #ff6600 0%, #ffff66 100%); */
 }
