--- a/adminpanel/src/components/Navbar.css
+++ b/adminpanel/src/components/Navbar.css
@@ -1,107 +1,103 @@
 .adminnav {
-    width: 100%;
+  width: 100%;
 }
 
 .adminnav .s1 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
 }
 
 .adminnav .left {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .adminnav .left img {
-    width: 50px;
+  width: 50px;
 }
 
 .adminnav .right {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
 }
 
-
-
 .adminnav .btn-inactive {
-    background-color: white;
-    border: 2px solid orange;
-    margin: 0px 10px;
-    color: orange;
-    font-weight: 700;
-    padding: 5px 10px;
-    border-radius: 15px;
+  background-color: white;
+  border: 2px solid #583b04;
+  margin: 0px 10px;
+  color: #583b04;
+  font-weight: 700;
+  padding: 5px 10px;
+  border-radius: 15px;
 }
 
 .adminnav .right .btn-inactive:hover {
-    background-color: orange;
-    color: white;
-    cursor: pointer;
+  background-color: #583b04;
+  color: white;
+  cursor: pointer;
 }
 
 .btn-active {
-    background-color: white;
-    border: 2px solid orange;
-    margin: 0px 10px;
-    color: orange;
-    font-weight: 700;
-    padding: 5px 10px;
-    border-radius: 15px;
+  background-color: white;
+  border: 2px solid #583b04;
+  margin: 0px 10px;
+  color: #583b04;
+  font-weight: 700;
+  padding: 5px 10px;
+  border-radius: 15px;
 
-
-    background-color: orange;
-    color: white;
-    cursor: pointer;
+  background-color: #583b04;
+  color: white;
+  cursor: pointer;
 }
 
 .adminnav .s2 {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    font-size: 18px;
-    display: flex;
-    font-weight: 700;
-    justify-content: center;
-    padding: 10px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  font-size: 18px;
+  display: flex;
+  font-weight: 700;
+  justify-content: center;
+  padding: 10px;
 }
 
-
 .adminnav button {
-    margin: 0px 10px;
+  margin: 0px 10px;
 }
 
 .iconbtn-inactive {
-    display: flex;
-    border: none;
-    padding: 0px;
-    /* background-color: aqua; */
+  display: flex;
+  border: none;
+  padding: 0px;
+  /* background-color: aqua; */
 }
 
 .iconbtn-inactive :hover {
-    cursor: pointer;
-    color: orange;
-    background: none;
+  cursor: pointer;
+  color: #583b04;
+  background: none;
 }
 
 .iconbtn-inactive svg,
 .iconbtn-active svg {
-    width: 20px;
+  width: 20px;
 }
 
 .notification-circle {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: red;
-    position: relative;
-    left: -6px;
-    top: -5px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: red;
+  position: relative;
+  left: -6px;
+  top: -5px;
 }
 
 .iconbtn-active {
-    color: orange;
-    border: none;
+  color: #583b04;
+  border: none;
 }
