--- a/adminpanel/src/components/Recentpurchases/RecentPurchases.css
+++ b/adminpanel/src/components/Recentpurchases/RecentPurchases.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   /* align-items: center; */
   width: 80%;
-  border: 1px solid orange;
+  border: 1px solid #583b04;
   overflow: hidden;
   border-radius: 10px;
 }
@@ -22,7 +22,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  background-color: orange;
+  background-color: #583b04;
   padding: 20px;
   padding-right: 30px;
   color: white;
@@ -30,7 +30,7 @@
 }
 
 .recentpurchases-outer .table button {
-  background-color: orange;
+  background-color: #583b04;
   border: none;
   padding: 5px 20px;
   color: white;
@@ -61,7 +61,7 @@
 }
 
 .recentpurchases-outer .table .table-small {
-  width: 100%;
+  /* width: 100%; */
   /* background-color: aqua; */
   margin-right: 5px;
 }
@@ -78,8 +78,8 @@
 
 .table-btn {
   width: 80px;
-  background-color: orange;
-  border: 2px solid orange;
+  background-color: #583b04;
+  border: 2px solid #583b04;
   text-align: center;
   border-radius: 10px;
   color: white;
