--- a/client/src/Components/Affiliatepanel/KYC/Kyc.css
+++ b/client/src/Components/Affiliatepanel/KYC/Kyc.css
@@ -1,118 +1,115 @@
 .kyc-not-verified {
-    background-color: rgb(255, 200, 200);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-    border: 2px solid red;
-    border-radius: 20px;
-    color: rgb(25, 25, 25);
-    text-align: center;
+  background-color: rgb(255, 200, 200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin: 20px;
+  border: 2px solid red;
+  border-radius: 20px;
+  color: rgb(25, 25, 25);
+  text-align: center;
 }
 
 .kyc-pending-verified {
-    background-color: rgb(255, 254, 200);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-    border: 2px solid rgb(255, 255, 0);
-    border-radius: 20px;
-    color: rgb(25, 25, 25);
-    text-align: center;
-
+  background-color: rgb(255, 254, 200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin: 20px;
+  border: 2px solid rgb(255, 255, 0);
+  border-radius: 20px;
+  color: rgb(25, 25, 25);
+  text-align: center;
 }
 
 .kyc-verified {
-    background-color: rgb(209, 255, 200);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-    border: 2px solid rgb(26, 255, 0);
-    border-radius: 20px;
-    color: rgb(25, 25, 25);
-    text-align: center;
-
+  background-color: rgb(209, 255, 200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin: 20px;
+  border: 2px solid rgb(26, 255, 0);
+  border-radius: 20px;
+  color: rgb(25, 25, 25);
+  text-align: center;
 }
 
 .kyc-details {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    /* background-color: aqua; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  /* background-color: aqua; */
 }
 
 .kyc-details h1 {
-    color: orange;
+  color: #583b04;
 }
 
 .kyc-form .outer {
-    display: flex;
-    width: 100%;
-    /* background-color: aqua; */
+  display: flex;
+  width: 100%;
+  /* background-color: aqua; */
 }
 
 .kyc-form .outer .inner {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 10px;
 }
 
 .kyc-form input {
-    padding: 5px;
-    border: 1px solid orange;
-    border-radius: 10px;
-    width: 500px;
-    margin: 5px 0px;
+  padding: 5px;
+  border: 1px solid #583b04;
+  border-radius: 10px;
+  width: 500px;
+  margin: 5px 0px;
 }
 
 .kyc-form button {
-    display: block;
-    margin: auto;
-    padding: 5px;
-    color: orange;
-    border: 2px solid orange;
-    margin-top: 20px;
-    font-size: 18px;
-    width: fit-content;
+  display: block;
+  margin: auto;
+  padding: 5px;
+  color: #583b04;
+  border: 2px solid #583b04;
+  margin-top: 20px;
+  font-size: 18px;
+  width: fit-content;
 }
 
 .kyc-form button:hover {
-    background-color: orange;
-    color: rgb(255, 255, 255);
-    transition: 1s all;
+  background-color: #583b04;
+  color: rgb(255, 255, 255);
+  transition: 1s all;
 }
 
-
 @media screen and (max-width: 1400px) {
-    .kyc-form input {
-        width: 100%;
-    }
+  .kyc-form input {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 700px) {
-    .kyc-form .outer {
-        flex-direction: column;
-        width: 100%;
-        /* background-color: aqua; */
-    }
+  .kyc-form .outer {
+    flex-direction: column;
+    width: 100%;
+    /* background-color: aqua; */
+  }
 
-    .kyc-form .outer .inner {
-        width: 100%;
-        margin: 10px 0px;
-    }
+  .kyc-form .outer .inner {
+    width: 100%;
+    margin: 10px 0px;
+  }
 
-    .kyc-form input {
-        width: 100%;
-    }
+  .kyc-form input {
+    width: 100%;
+  }
 
-    .kyc-details h1 {
-        text-align: center;
-    }
+  .kyc-details h1 {
+    text-align: center;
+  }
 }
