--- a/client/src/Components/Cards/Homepagecoursecardcontainer.css
+++ b/client/src/Components/Cards/Homepagecoursecardcontainer.css
@@ -1,128 +1,126 @@
-#spo{
-    color:orange;
-    font-size:50px;
-    font-weight:700;
-  }
-  
+#spo {
+  color: #583b04;
+  font-size: 50px;
+  font-weight: 700;
+}
+
 .home-all-card-container-outer {
-    background: linear-gradient(to bottom, rgb(255, 255, 255) 60%, #ffffff 100%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0px;
-    /* padding-bottom: 150px; */
+  background: linear-gradient(to bottom, rgb(255, 255, 255) 60%, #ffffff 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0px;
+  /* padding-bottom: 150px; */
 }
 
 .home-all-card-container-outer .head1 {
-    color: orange;
-    font-size: 100px;
-    border: 4px solid orange;
-    padding: 10px 20px;
-    margin: 40px 0px;
+  color: #583b04;
+  font-size: 100px;
+  border: 4px solid #583b04;
+  padding: 10px 20px;
+  margin: 40px 0px;
 }
 
 .home-all-card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.card{
-    width:15rem;
-    height: 15rem;
+.card {
+  width: 15rem;
+  height: 15rem;
 }
-.pbtn{
-    width:3rem;
-    margin-top: 50px;
-    display: none;
+.pbtn {
+  width: 3rem;
+  margin-top: 50px;
+  display: none;
 }
 
-.nbtn{
-    width:3rem;
-    margin-top: 50px;
-    display: none;
+.nbtn {
+  width: 3rem;
+  margin-top: 50px;
+  display: none;
 }
 
 .show-more {
-    background-color: orange;
-    color: white;
-    border: 1px solid orange;
-    display: block;
-    margin: auto;
-    padding: 10px;
-    font-size: 30px;
-    margin: 30px 0px;
+  background-color: #583b04;
+  color: white;
+  border: 1px solid #583b04;
+  display: block;
+  margin: auto;
+  padding: 10px;
+  font-size: 30px;
+  margin: 30px 0px;
 }
 .show-more:hover {
-    background-color: orange;
-    color: white;
-    border: 1px solid orange;
-    border-radius: 30px;
-    transition: all 1s;
-    box-shadow: 0px 0px 30px orange;
+  background-color: #583b04;
+  color: white;
+  border: 1px solid #583b04;
+  border-radius: 30px;
+  transition: all 1s;
+  box-shadow: 0px 0px 30px #583b04;
 }
-.stretch-card>.card {
-    width: 100%;
-    min-width: 100%
+.stretch-card > .card {
+  width: 100%;
+  min-width: 100%;
 }
 
 body {
-    background-color: #f9f9fa
+  background-color: #f9f9fa;
 }
 
 .flex {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
-@media (max-width:991.98px) {
-    .padding {
-        padding: 1.5rem
-    }
+@media (max-width: 991.98px) {
+  .padding {
+    padding: 1.5rem;
+  }
 }
 
-@media (max-width:767.98px) {
-    .padding {
-        padding: 1rem
-    }
+@media (max-width: 767.98px) {
+  .padding {
+    padding: 1rem;
+  }
 }
 
 .padding {
-    padding: 3rem
-}
-
-.owl-carousel .item{
- margin: 3px;
-}
-.owl-carousel .item img{
- display: block;
- width: 100%;
- height: auto;
+  padding: 3rem;
 }
 
 .owl-carousel .item {
-   margin: 3px;
+  margin: 3px;
+}
+.owl-carousel .item img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
-.owl-carousel{
-   margin-bottom:15px;
+.owl-carousel .item {
+  margin: 3px;
 }
 
-@media (max-width:1000px) {
-    .home-all-card-container-outer .head1 {
-        font-size: 70px;
-        padding: 10px 20px;
-        margin: 20px 0px;
-    }
-
+.owl-carousel {
+  margin-bottom: 15px;
 }
 
-@media (max-width:650px) {
-    .home-all-card-container-outer .head1 {
-        font-size: 40px;
-        padding: 10px 20px;
-        margin: 20px 0px;
-    }
+@media (max-width: 1000px) {
+  .home-all-card-container-outer .head1 {
+    font-size: 70px;
+    padding: 10px 20px;
+    margin: 20px 0px;
+  }
+}
 
+@media (max-width: 650px) {
+  .home-all-card-container-outer .head1 {
+    font-size: 40px;
+    padding: 10px 20px;
+    margin: 20px 0px;
+  }
 }
