--- a/client/src/Components/homepage/Home.css
+++ b/client/src/Components/homepage/Home.css
@@ -20,7 +20,7 @@ nav {
 }
 
 .home-paragraph {
-  background-color: #eb4d4b;
+  background-color: #85110f;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +54,7 @@ nav {
   display: block;
   width: fit-content;
   margin: 30px auto;
-  color: orange;
+  color: #583b04;
 }
 
 .img-text-home {
