--- a/client/src/Components/product-slider/Productcarousel.css
+++ b/client/src/Components/product-slider/Productcarousel.css
@@ -1,65 +1,63 @@
 .product-carousel-outer {
-    background-color: orange;
+  background-color: #583b04;
 }
 
 .product-carousel {
-    position: relative;
-    overflow: hidden;
-    padding: 20px;
-    /* width: 100%; */
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+  /* width: 100%; */
 }
 
 .product-container {
-    padding: 0 10px;
-    display: flex;
-    overflow-x: hidden;
-    /* scrollbar-width: none; */
-    scroll-behavior: smooth;
+  padding: 0 10px;
+  display: flex;
+  overflow-x: hidden;
+  /* scrollbar-width: none; */
+  scroll-behavior: smooth;
 }
 
 .pre-btn,
 .next-btn {
-    border: none;
-    width: 60px;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0);
+  border: none;
+  width: 60px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .pre-btn:hover,
 .next-btn:hover {
-    background-color: rgba(255, 0, 0, 0);
+  background-color: rgba(255, 0, 0, 0);
 }
 
 .next-btn {
-    right: 0;
+  right: 0;
 }
 
 .next-btn svg,
 .pre-btn svg {
+  color: #583b04;
+  background-color: rgba(255, 255, 255, 0.667);
+  box-shadow: 0px 0px 10px 1px black;
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  line-height: 0px;
 
-    color: orange;
-    background-color: rgba(255, 255, 255, 0.667);
-    box-shadow: 0px 0px 10px 1px black;
-    border-radius: 10px;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    line-height: 0px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
 .product-carousel-title {
-    padding: 0px;
-    padding-top: 30px;
-    text-align: center;
-    color: white;
+  padding: 0px;
+  padding-top: 30px;
+  text-align: center;
+  color: white;
 }
